<resources>
    <string name="app_name">My Dairy</string>
    <string name="title">Title</string>
    <string name="entry">Entry</string>
    <string name="save">Save</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="my_diary">MY DIARY</string>
    <string name="pour_out_your_feelings">Pour out your feelings</string>
    <string name="add">+</string>
    <string name="back"><![CDATA[<---]]></string>
    <string name="todo">TODO</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="logout">Logout</string>
    <string name="Add">Add</string>
    <string name="your_entries">Your Entries</string>
    <string name="features">Features</string>
    <string name="profile">Profile</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="write_here">Write here....</string>
    <string name="title_">Title…</string>
    <string name="email">Email :</string>
    <string name="name">Name :</string>
    <string name="example">Example</string>
    <string name="my_diary_">My Diary</string>
    <string name="title_activity_re_write">ReWriteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete">Delete</string>
    <string name="account">Account</string>
    <string name="tear">Tear</string>
    <string name="page_no">Page No</string>
    <string name="edit">Edit</string>
    <string name="enter_page_no">Enter page no</string>
    <string name="note_your_dairy_entry_on_the_corresponding_page_number_will_be_permanently_deleted_are_you_sure_u_wanna_delete_your_memories_on_this_page_by_removing_this_page_from_your_dairy_once_torn_out_from_the_diary_you_will_never_be_able_to_write_on_that_page_again">NOTE: Your diary entry on the corresponding page number will be permanently deleted. Are you sure u want to delete your memories on this page by removing this page from your dairy. Once torn out from the diary, you will never be able to write on that page again</string>
    <string name="hope_you_enjoyed_the_app_and_used_all_its_features_so_its_basically_an_app_that_mimics_you_everyday_life_diary_one_where_you_can_pour_out_your_feelings_and_write_anything_and_everything_due_to_time_constraints_i_couldn_t_add_much_features_to_the_app_but_i_promise_it_will_be_there_in_the_next_update">Hope you enjoyed the app and used all its features. So its basically an app that mimics you everyday life diary. One where you can pour out your feelings and write anything and everything. Due to time constraints…i couldn\'t add much features to the app…but i promise it will be there in the next update!!</string>
    <string name="hey_y_all_i_m_shri_a_fresher_from_iit_g_just_recently_started_off_with_this_field_and_i_already_love_it_i_hope_you_enjoyed_the_app_see_you_soon_until_then_signing_off_shri">Hey y\'all i\'m Shri…A fresher from IIT G. Just recently started off with this field and i already love it. I hope you enjoyed the app! See you soon!…Until then signing off… Shri</string>
    <string name="about_app">About App</string>
    <string name="about_myself">About Myself</string>
    <string name="upcoming_updates">Upcoming Updates</string>
</resources>