<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground">

    <TextView
        android:id="@+id/delete_text"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"

        android:text="@string/note_your_dairy_entry_on_the_corresponding_page_number_will_be_permanently_deleted_are_you_sure_u_wanna_delete_your_memories_on_this_page_by_removing_this_page_from_your_dairy_once_torn_out_from_the_diary_you_will_never_be_able_to_write_on_that_page_again"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pageno"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_page_no"
        android:inputType="number"
        android:textColor="#090202"
        android:textColorHint="@color/black"
        android:background="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_text" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/tear"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/pageno"
        app:layout_constraintTop_toTopOf="@+id/pageno" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/back"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary"
        app:cornerRadius="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>